# ESP32S3_Monitor

./: AudioManager.cpp  AudioManager.h  CMakeLists.txt  ConfigStorage.cpp  ConfigStorage.h  DisplayManager.cpp  DisplayManager.h  ESP32S3_Monitor.ino  FileManager.cpp  FileManager.h  I2CBusManager.cpp  I2CBusManager.h  LVGL_Driver.cpp  LVGL_Driver.h  LocationManager.cpp  LocationManager.h  MDNSScanner.cpp  MDNSScanner.h  Monitor.cpp  Monitor.h  OTAManager.cpp  OTAManager.h  OTA_Setup_Guide.md  PSRAMManager.cpp  PSRAMManager.h  PowerMonitorData.h  TimeManager.cpp  TimeManager.h  VERSION_MANAGEMENT.md  Version.h  WeatherManager.cpp  WeatherManager.h  WebServerManager.cpp  WebServerManager.h  WebServerManager_OTA.cpp  WebServerManager_ScreenSettings.cpp  WebServerManager_ServerSettings.cpp  WebServerManager_UI.cpp  WebServerManager_UI1.cpp  WebServerManager_UI2.cpp  (+88 more)
.cursor/rules/: rules.mdc
demo/: Network_Scanner.cpp  Network_Scanner.h
